--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,21 @@
 post-topic {
     margin: 0 4px;
 }
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+.app-wrapper {
+    display: grid;
+    justify-content: center;
+}
+
+.home {
+    height: 100vh;
+    width: 66vw;
+    display: grid;
+    align-content: space-around;
+    justify-items: center;
+    //grid-template-rows 1fr 2fr 1fr;
+}
