styled searchBar component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,3 +19,8 @@ body {
     justify-items: center;
     //grid-template-rows 1fr 2fr 1fr;
 }
+
+$color-gray-one: #666666;
+$color-gray-two: #B3B3B3;
+
+@import './searchBar';
