fixed some grid styles

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,9 +16,17 @@ body {
     width: 66vw;
     display: grid;
     align-content: space-around;
-    justify-items: center;
+    justify-items: stretch;
     //grid-template-rows 1fr 2fr 1fr;
 }
+
+.logo-main,
+.recent-posts
+{
+    display: grid;
+    justify-items: center;
+}
+
 
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
