styled the reent posts component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,4 @@
-post-topic {
+.post-topic {
     margin: 0 4px;
 }
 
@@ -16,8 +16,8 @@ body {
     width: 66vw;
     display: grid;
     align-content: space-around;
-    justify-items: stretch;
-    //grid-template-rows 1fr 2fr 1fr;
+    // justify-items: stretch;
+    // grid-template-rows: 1fr 2fr 1fr;
 }
 
 .logo-main,
@@ -27,8 +27,15 @@ body {
     justify-items: center;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
 
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
+$color-blue-one: #0079FF;
 
 @import './searchBar';
+@import './recentPosts';
