added media queries to the home screen component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -24,6 +24,12 @@ ul {
     list-style-type: none;
 }
 
+.no-content {
+    color: #666666;
+    font-size: 14px;
+    line-height: 17px;
+}
+
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
 $color-gray-three: #D8D8D8;
